# miraeLLMai2024

./: .gitignore  pyproject.toml
common/: preprocess_marketdata.ipynb
data/: close_df_top100.pkl  customer_김미래.csv  customer_김증권.csv  customer_박에셋.csv  customer_이증권.csv  name_to_ticker.pkl  returns_df_top100.pkl  ticker_to_name.pkl  top100_tickers.pkl
jaepil/: clovagraphrag.py  customer.py  hyperclova_sandbox.ipynb  llm_streamlit.py  navernewstop100.ipynb
jaepil/executors/: clovastudio_executor.py  sliding_window_executor.py
seokbum/: 1.preprocessing.ipynb  2.hyperclovaX_extracting.ipynb  3.extracted_result_processing.ipynb  clovastudio_executor.py  completion_executor.py  hyperclovaX_extracting.ipynb  news_info.json  news_url.txt  newsurl.txt  preprocessing.ipynb  requirements.txt  sliding_window_executor.py  url_to_filename_map.json
seokbum/data/: news_info_example.json  news_url_example.txt
seokbum/executors/: completion_executor.py
seokbum/graph-rag/: 4.GraphRAG.py
seokbum/results/: company.csv  event.csv  extracted_result_example.txt  nation.csv  people.csv  relation.csv  tech.csv
