[tool.poetry]
name = "miraellmai2024"
version = "0.1.0"
description = ""
authors = ["jaepil-choi <chljeffreyz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
notebook = "^7.2.1"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
tqdm = "^4.66.4"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
streamlit = "^1.37.0"
neo4j = "^5.23.0"
streamlit-extras = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
